# rustforged

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  packager.toml  windows_run.bat
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
docs/: ALLOWED_WARNINGS.md  INSTALLATION.md  TODO.md
packaging/: README.md
packaging/icons/: README.md  icon.icns
releases/: .gitkeep  latest.json
scripts/: build-installers.sh  build-macos.sh  build-windows.ps1
src/: README.md  common.rs  constants.rs  main.rs  paths.rs  theme.rs
src/assets/: README.md  asset_type.rs  library.rs  mod.rs  placeholder.rs  validation.rs
src/config/: README.md  mod.rs
src/editor/: README.md  annotations.rs  brush.rs  camera.rs  clipboard.rs  conditions.rs  fog.rs  grid.rs  history.rs  mod.rs  params.rs  placement.rs  selection.rs  tools.rs
src/editor/annotations/: README.md  components.rs  draw_tool.rs  gizmo.rs  hit_testing.rs  layer_helpers.rs  line_tool.rs  mod.rs  rendering.rs  state.rs  text_tool.rs
src/editor/clipboard/: README.md  copy.rs  cut.rs  helpers.rs  mod.rs  paste.rs  tests.rs  types.rs
src/editor/history/: README.md  command_history.rs  commands.rs  data_types.rs  execute.rs  mod.rs  recording.rs  spawn_helpers.rs  systems.rs  tests.rs
src/editor/selection/: box_select.rs  cursor.rs  drag.rs  gizmos.rs  handle.rs  hit_detection.rs  mod.rs  shortcuts.rs
src/map/: README.md  fog.rs  layer.rs  map_data.rs  mod.rs  persistence.rs  placed_item.rs
src/map/persistence/: README.md  dirty.rs  helpers.rs  load.rs  map_state.rs  messages.rs  mod.rs  resources.rs  results.rs  save.rs  tests.rs
src/session/: README.md  keep_awake.rs  mod.rs  player_window.rs  state.rs  viewport.rs
src/ui/: README.md  asset_browser.rs  asset_import.rs  file_menu.rs  layers_panel.rs  mod.rs  properties.rs  session_controls.rs  settings_dialog.rs  toolbar.rs
src/ui/asset_browser/: README.md  asset_ops.rs  dialogs.rs  helpers.rs  library_ops.rs  main_panel.rs  mod.rs  state.rs  thumbnails.rs
src/ui/layers_panel/: README.md  fog.rs  help.rs  layers.rs  main_panel.rs  mod.rs  properties.rs  session.rs
src/update/: README.md  manifest.rs  mod.rs  operations.rs  state.rs  systems.rs  tests.rs  ui.rs
