[package]
name = "rustforged"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.17.3", features = [
    "dynamic_linking",
    "jpeg",
    "webp",
    "bmp",
    "tiff",
    "gif",
] }
bevy_egui = "0.38"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp", "tiff"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3
