[package]
name = "rustforged"
version = "0.1.0"
edition = "2024"
description = "D&D 5E Virtual Tabletop map editor"
repository = "https://github.com/fitz11/rustforged"
keywords = ["vtt", "dnd", "bevy", "tabletop", "rpg"]
categories = ["games", "graphics"]
license = "MIT OR Apache-2.0"

[features]
default = ["dev"]
# Use dynamic linking for faster dev builds (not for release!)
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.17.3", features = [
    "jpeg",
    "webp",
    "bmp",
    "tiff",
    "gif",
] }
bevy_egui = "0.38"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "bmp", "tiff"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
ureq = { version = "2", features = ["json"] }
semver = "1"
open = "5"
futures-lite = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = "0.4"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Fast CI builds - prioritize compile speed over runtime performance
[profile.ci]
inherits = "dev"
opt-level = 0
debug = 0

[profile.ci.package."*"]
opt-level = 0
debug = 0

# Optimized release builds
[profile.release]
opt-level = 3
lto = "thin"
strip = true
