[package]
name = "rustforged"
version = "0.1.2"
edition = "2024"
description = "D&D 5E Virtual Tabletop map editor"
repository = "https://github.com/fitz11/rustforged"
keywords = ["vtt", "dnd", "bevy", "tabletop", "rpg"]
categories = ["games", "graphics"]
license = "MIT OR Apache-2.0"

[features]
default = []
# Use dynamic linking for faster dev builds (not for release!)
dev = ["bevy/dynamic_linking"]

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
  "2d",
  "jpeg",
  "webp",
  "bmp",
  "tiff",
  "gif",
] }
bevy_egui = "0.39"
image = { version = "0.25", default-features = false, features = [
  "png",
  "jpeg",
  "webp",
  "gif",
  "bmp",
  "tiff",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rfd = "0.15"
ureq = { version = "2", features = ["json"] }
semver = "1"
open = "5"
futures-lite = "2"
zip = { version = "7", default-features = false, features = ["deflate"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
chrono = "0.4"
dirs = "6"
keepawake = "0.6"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Fast CI builds - prioritize compile speed over runtime performance
[profile.ci]
inherits = "dev"
opt-level = 0
debug = 0

[profile.ci.package."*"]
opt-level = 0
debug = 0

# Optimized release builds
[profile.release]
opt-level = 3
lto = "thin"
strip = true

# `version` is intentionally omitted: cargo-packager fills it from [package].version
# above, so the release version lives in exactly one place. Do not re-add it here.
[package.metadata.packager]
before_packaging_command = "cargo build --release"
product-name = "Rustforged"
identifier = "dev.squishygoose.rustforged"
description = "D&D 5E Virtual Tabletop Map Editor"
authors = ["fitz11"]
publisher = "squishygoose"
copyright = "Copyright © 2026 Rustforged Contributors"
license-file = "LICENSE-MIT"
homepage = "https://github.com/fitz11/rustforged"
out-dir = "target/release/packager"
icons = ["packaging/icons/icon.ico", "packaging/icons/icon.icns"]

# The Info.plist is generated entirely from the config above. cargo-packager already
# sets NSHighResolutionCapable, CFBundleShortVersionString (from the crate version),
# CFBundleIdentifier, and NSHumanReadableCopyright, so no hand-written plist is needed.
[package.metadata.packager.macos]
backgroundApp = false
minimum-system-version = "10.15"
# Code-signing identity. cargo-packager ONLY signs when this is set here — it does not
# read an APPLE_SIGNING_IDENTITY env var (unlike Tauri). The string is not secret (it is
# embedded in every signed binary). Signing needs the matching Developer ID cert either
# in the local login keychain (local builds) or imported at build time from the
# APPLE_CERTIFICATE / APPLE_CERTIFICATE_PASSWORD env vars (CI). Notarization credentials
# are read separately from the environment (APPLE_API_KEY / APPLE_API_ISSUER /
# APPLE_API_KEY_PATH, or APPLE_ID / APPLE_PASSWORD / APPLE_TEAM_ID).
signing-identity = "Developer ID Application: David Fitzsimmons (59JTRDC64H)"
